<resources>
    <string name="app_name" translatable="false">iptv</string>
    <string name="channel_number_default" translatable="false">001</string>
    <string name="channel_name_default" translatable="false">test</string>
    <string name="codec_info_default" translatable="false">unknown</string>
    <string name="media_info_default" translatable="false">unknown</string>
    <string name="bitrate_info_default" translatable="false">unknown</string>
    <string name="link_info" translatable="false">link [1/1]</string>
    <string name="current_link_number" translatable="false">1</string>
    <string name="total_link_number" translatable="false">1</string>
    <string name="current_epg_program_default" translatable="false">unknown</string>
    <string name="next_epg_program_default" translatable="false">unknown</string>
    <string name="list_item_index_placeholder" translatable="false">001</string>
    <string name="list_item_desc_placeholder" translatable="false">test string</string>
    <string name="default_group_name" translatable="false">Default Group</string>
    <string name="channel_source_hint" translatable="false">Please input source url</string>
    <string name="modify_share" translatable="false">Modify storage settings</string>
    <string name="add_share" translatable="false">Add share storage</string>
    <string name="cancel_delete" translatable="false">Cancel delete</string>
    <string name="confirm_delete" translatable="false">Confirm delete</string>
    <string name="share_home_banner" translatable="false">Storage</string>
    <string name="sort" translatable="false">Sort</string>
    <string name="goto_root" translatable="false">Goto root path</string>
    <string name="root_path" translatable="false">/</string>
    <string name="home_page" translatable="false">Home</string>
    <string name="live_page" translatable="false">Live</string>
    <string name="share_page" translatable="false">Shares</string>
    <string name="settings_page" translatable="false">Settings</string>
    <string name="webdav_input_name_hint" translatable="false">Set WebDAV Service Name</string>
    <string name="webdav_input_address_hint" translatable="false">WebDAV Service Address，ie. (http://example.com)</string>
    <string name="webdav_input_root_path_hint" translatable="false">Set Root Path (optional)</string>
    <string name="webdav_input_username_hint" translatable="false">Username (optional)</string>
    <string name="webdav_input_password_hint" translatable="false">Password (optional)</string>
    <string name="controls_prev_description" translatable="false">Seek to prev media</string>
    <string name="controls_play_description" translatable="false">Play this media</string>
    <string name="controls_pause_description" translatable="false">Pause playing</string>
    <string name="controls_next_description" translatable="false">Seek to next media</string>
    <string name="default_position" translatable="false">0:00:00</string>
    <string name="default_media_duration" translatable="false">0:00:00</string>
    <string name="gesture_direction_indicator" translatable="false">Indicator of gesture direction</string>
    <string name="default_gesture_position" translatable="false">0:00:00/0:00:00</string>
    <string name="enter_fullscreen" translatable="false">Enter or exit fullscreen mode</string>
    <string name="player_setting" translatable="false">Player settings</string>
    <string name="ijkplayer" translatable="false">IjkPlayer(hardware)</string>
    <string name="ijkplayer_sw" translatable="false">IjkPlayer(software)</string>
    <string name="exoplayer" translatable="false">Exoplayer</string>
    <string name="surface_view" translatable="false">SurfaceView</string>
    <string name="texture_view" translatable="false">TextureView</string>
    <string name="set_player_type" translatable="false">Set player type</string>
    <string name="set_surface_type" translatable="false">Set surface type</string>
    <string name="player_setting_header" translatable="false">Player Settings</string>
    <string name="player_type_header" translatable="false">Set Player Type</string>
    <string name="surface_type_header" translatable="false">Set Surface Type</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="audiotrack_selection" translatable="false">Select audio track</string>
    <string name="subtitle_selection" translatable="false">Select subtitle track</string>
    <string name="add_webdav_storage" translatable="false">Add WebDAV storage</string>
    <string name="add" translatable="false">Add</string>
    <string name="ok" translatable="false">OK</string>
    <string name="live_channel_web_setting_hint_template" formatted="false" translatable="false">You can set it via http://%s:%d</string>
    <string name="set_live_channel_source" translatable="false">Set live channel source</string>
    <string name="set_live_epg_source" translatable="false">Set live EPG source</string>
    <string name="set_live_sources_title" translatable="false">Set live sources</string>
    <string name="disable_subtitle" translatable="false">Disable Subtitle Track</string>
    <string name="back_press_hint" translatable="false">press again to quiet</string>
    <string name="modify" translatable="false">Modify</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="set_source_timeout" translatable="false">Set source timeout</string>
    <string name="show_network_speed" translatable="false">Show network speed</string>
    <string name="locate_to">locate to</string>
    <string name="locate">locate</string>
    <string name="name_asc">Name (A-Z)</string>
    <string name="name_desc">Name (Z-A)</string>
    <string name="size_asc">Size (Smaller)</string>
    <string name="size_desc">Size (Bigger)</string>
    <string name="last_modified_asc">Date (Older)</string>
    <string name="last_modified_desc">Date (Newer)</string>
</resources>