<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/player_setting_header">
        <ListPreference
            app:defaultValue="ijkplayer"
            app:entries="@array/player_type_entries"
            app:entryValues="@array/player_type_values"
            app:key="player_type"
            app:title="@string/set_player_type"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="surface_view"
            app:entries="@array/surface_type_entries"
            app:entryValues="@array/surface_type_values"
            app:key="surface_type"
            app:title="@string/set_surface_type"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="show_network_speed"
            app:title="@string/show_network_speed"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>