<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/webdav_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/webdav_input_name_hint"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/webdav_server"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/webdav_input_address_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/webdav_path"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/webdav_input_root_path_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/webdav_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/webdav_input_username_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/webdav_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/webdav_input_password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>